
        * Fixed wrong_calc_job parameter.

2012-10-19  ChunEon Park (Hermet)

        * Fix elm_transit image animation which last few frames are skipped.

2012-10-20  Cedric Bail

	1.7.1 release

2012-10-25  Michael Bouchaud (yoz)

         * some fix for promote and demote in genlist

2012-10-30  ChunEon Park (Hermet)

        * Fix the transit to accept proxy object.

2012-11-02  ChunEon Park (Hermet)

        * Don't update map uv with image size for proxy object in elm_flip.

2012-11-07  Mikael Sans (xhell)

        * Fix wrong parameter for thumbnail error in elm_icon.

2012-11-12  Michael Bouchaud (yoz)

        * Add missing selected event in elm_index (elm_index_item_selected_set)

2012-11-21  Michael Bouchaud (yoz)

        * update the min size hint on elm_label after a text set

2012-11-22  Michael Bouchaud (yoz)

        * fix elm_flip to show only one face at a time

2012-11-22  ChunEon Park (Hermet)

        * Lets remove contents regardless of the preseve_on_set if naviframe is
        deleted.

2012-11-22  Shilpa Sigh (shilpa.singh@samsung.com)

        * Clear the title contents when naviframe item is deleted.

2012-11-23 Luis Felipe Strano Moraes

        1.7.2 release

2012-11-23  Carsten Haitzler (The Rasterman)

        * Fix build on systems without clearenv() (eg bsd).

2012-11-23  ChunEon Park (Hermet)

        * Free the text parts of the naviframe item when item is deleted.

2012-11-29  ChunEon Park (Hermet)

        * Fix the mapbuf to update it's contents correctly, even if they go
        outside of the buffer

2012-11-30  ChunEon Park (Hermet)

        * Fix the naviframe to resize it's items which are inserted.

2012-11-30  WooHyun Jung

        * Fix layout when content_set or text_set is called with NULL part name.

2012-11-30  ChunEon Park (Hermet)

        * emit the signals for content_set/unset text_set/unset one time!

2012-12-02  Mike Blumenkrantz

        * Fix case where tooltips could go offscreen unnecessarily